--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://thomaslynn132.github.io/portfolio-wit-react.js",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.0"
   }
 }
