--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
