--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "emailjs": "^4.0.3",
+    "firebase": "^10.12.4",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
